grammar.js
    source_file: $ => repeat($._statement),

    _statement: $ => choice(
      $.comment,
      $.doc_comment,
      $.block_comment,
      $._statement_core,
    ),

    _statement_core: $ => choice(
      $.if_directive,      // Before directive - conditional #if
      $.if_win_directive,  // Before directive - conditional #IfWin*
      $.directive,
      $.hotkey,
      $.hotstring_definition,
      $.gui_action,         // Before label - matches "GuiName:SubCommand" patterns like "MyGui:Add"
      $.gui_action_spaced,  // Before label - matches "GuiName: SubCommand" patterns (with space)
      $.gui_options,        // Before label - matches "GuiName:+/-Option" patterns like "MyGui:-Caption"
      $.gui_options_spaced, // Before label - matches "GuiName: +/-Option" patterns with space
      $.gui_target,   // Before label - matches "GuiName:," to prevent false labels in injection
      $.drive_letter, // Before label for uppercase drive-letter references like "C:"
      $.label,
      $.class_definition,
      $.function_definition,
      // Control flow statements (before keyword!)
      $.if_statement,
      $.while_statement,
      $.loop_statement,
      $.for_statement,
      $.try_statement,
      $.switch_statement,
      $.return_statement,
      // Expressions that can appear at statement level
      $.continuation_assignment_expression,
      $.legacy_assignment_expression,
      $.assignment_expression,
      $.method_call,
      $.member_expression,
      $.index_expression,
      $.function_call,
      $.if_command,  // Before command - matches identifier, args with block + else
      $.command,
      $.array_literal,
      $.quoted_continuation_string,
      $.string,
      $.number,
      $.boolean,
      // NOTE: parenthesized_expression removed from _statement to reduce state count
      // It's still in _expression for conditions
      $.keyword,
      // Note: gui_option_flag NOT in _statement - would cause label + gui_option_flag to beat gui_options/gui_options_spaced
      // Standalone +Option in command args parses as operator + identifier, with identifier
      // getting @constant highlighting via #match? rule on option names
      $.operator,
      prec(4, $.variable_ref),
      $.identifier,
      $._punctuation,
    ),

    doc_comment: $ => prec(102, seq(
      '/**',
      repeat(choice(
        /[^*]+/,
        /\*+[^/*]/
      )),
      '*/'
    )),

    comment: $ => token(seq(
      ';',
      /.*/
    )),

    block_comment: $ => prec(101, seq(
      '/*',
      repeat(choice(
        /[^*]+/,
        /\*+[^/*]/
      )),
      '*/'
    )),

    // Generic directive: #Name args (for #Include, #SingleInstance, etc.)
    // Conditional directives (#if, #ifWin*) have dedicated rules with higher precedence
    label: $ => seq(
      field('name', $.identifier),
      token.immediate(':')
    ),

    // GUI action (like MyGui:Add or MyGui:Show) - higher precedence than label
    // to prevent "MyGui:Add" from being parsed as label + identifier during injection
    // Captures GUI name and sub-command as separate fields for highlighting
    // Both : and action must be immediate (no whitespace) to distinguish from label + newline + code
    gui_action: $ => prec(10, seq(
      field('gui_name', $.identifier),
      token.immediate(':'),
      field('action', alias(token.immediate(/[a-zA-Z_][a-zA-Z0-9_]*/), $.identifier))
    )),

    // GUI action with space between colon and subcommand (like "MyGui: Color" or "MyGui: Font")
    // Requires known GUI subcommand to distinguish from regular labels
    // token.immediate for both colon and action to prevent newline from extras
    gui_target: $ => prec(10, seq(
      field('gui_name', $.identifier),
      token.immediate(':'),
      token.immediate(',')
    )),

    // Drive letter reference (like "C:" in DriveGet commands)
    // Single token pattern - lower precedence than identifiers so "s:=" parses as assignment.
    // This prevents "C:" from being parsed as a label during injection
    // Note: won't match "x:=" because := is tokenized as a unit (operator)
    drive_letter: $ => token(prec(-1, /[A-Z]:/)),

    // GUI option flag (like +Caption or -Border) - standalone options in command arguments
    // Single token with high precedence to win over operator + identifier
    // Highlighted with #match? to validate known option names
    block: $ => repeat1($._statement),

    // Parenthesized expression for conditions
    parenthesized_expression: $ => seq('(', $._expression, ')'),

    // Statement block (braces + optional statements) for control flow
    statement_block: $ => seq('{', optional($.block), '}'),

    // Control flow statements - support both braced blocks and single statements
    if_command: $ => prec.right(5, seq(
      field('name', $.identifier),
      ',',
      optional($.command_arguments),
      $._block_after_newline,  // Only matches when { follows a newline
      field('consequence', $.statement_block),
      optional(field('alternative', $.else_clause))
    )),

    else_clause: $ => seq(
      'else',
      choice($.if_statement, $.if_command, $.statement_block, $._statement_core)
    ),

    function_definition: $ => prec.dynamic(10, seq(
      field('name', $.identifier),
      token.immediate('('),
      optional($.parameter_list),
      ')',
      '{',
      optional(field('body', $.block)),
      '}'
    )),

    function_call: $ => prec.dynamic(5, seq(
      field('name', $.identifier),
      token.immediate('('),
      optional($.argument_list),
      ')'
    )),

    // Member expression with identifier or number property (for pos.1, pos.2 syntax)
    method_call: $ => prec(3, prec.left(2, seq(
      field('object', choice($.identifier, $.member_expression, $.this_expression, $.base_expression)),
      token.immediate('.'),
      field('method', $.identifier),
      token.immediate('('),
      optional($.argument_list),
      ')'
    ))),

    // Commands use comma syntax: MsgBox, args
    // Function calls use parens: MsgBox("args")
    // The comma after the name distinguishes command from function call
    // Command names are highlighted via #match? in highlights.scm
    // prec.right prefers consuming tokens as command_arguments vs separate statement
    // Uses _statement_end to terminate before next label/command on new line
    command: $ => prec.right(2, choice(
      // Commands can omit the comma when the argument is a forced expression:
      //   Run % "*RunAs " A_AhkPath
      prec(20, seq(
        field('name', $.identifier),
        field('arguments', $.force_expression)
      )),
      // Command terminated by statement_end (before next label/command)
      seq(
        field('name', $.identifier),
        ',',
        optional($.command_arguments),
        $._statement_end
      ),
      // Regular command (arguments consume to natural boundary)
      seq(
        field('name', $.identifier),
        ',',
        optional($.command_arguments)
      )
    )),

    // Structured command arguments - parses %var%, GUI patterns, strings, etc. directly
    // No injection needed - eliminates recursion problem
    // All patterns exclude \r\n to ensure command terminates at newline
    // prec.right prefers continuing repeat over ending command_arguments
    command_arguments: $ => prec.right(repeat1(choice(
      $.command_continuation_section, // multiline command text with optional trailing args
      $.force_expression,      // % expr - FIRST so it wins over variable_ref
      $.variable_ref,          // %name% - variable references
      $.string,                // "text" - quoted strings
      $.number,                // 123 - numeric literals
      $.gui_action,            // MyGui:Add - GUI subcommands (no space)
      $.gui_action_spaced,     // MyGui: Add - GUI subcommands (with space)
      $.gui_options,            // MyGui:-Caption - GUI options (no space)
      $.gui_options_spaced,    // MyGui: -Caption - GUI options (with space)
      $.gui_target,            // MyGui:, - GUI target reference
      $.gui_option_flag,       // +Caption -Border - standalone option flags
      $.drive_letter,          // C: - drive letter (for file paths)
      $.identifier,            // word - plain identifiers
      alias(token(prec(100, '/*')), $.path_wildcard),  // file wildcard in paths, not a block comment
      ',',                     // comma separator
      /[ \t]+/,                // whitespace (not newline)
      /[^a-zA-Z0-9_%,:" \t\r\n?+=\-!&|<>^~]+/, // symbols except expression operators
    ))),

    // Variable reference: %var% syntax
    variable_ref: $ => seq('%', $.identifier, '%'),

    // Force expression: External scanner detects boundaries, grammar parses expression
    // Used in command arguments to evaluate expressions in expression mode
    // Examples: % x + 1, % x ? "A" : "B", % func()
    // Scanner emits FORCE_EXPR_START at % <space>, FORCE_EXPR_BOUNDARY at comma/newline
    // This enables sub-expression highlighting by parsing structure instead of terminal token
    force_expression: $ => prec.right(15, seq(
      $.force_expr_start,      // External scanner token (visible for highlighting)
      choice(
        $.force_concat_expression,
        $._expression,
      ),            // Regular grammar expression parsing with child nodes!
      $._force_expr_boundary,  // External scanner token
    )),

    // Concatenation-friendly force-expression body.
    // This is used for command forms like:
    //   Run % "*RunAs " (s:=...) Chr(34) A_ScriptFullPath ...
    force_concat_expression: $ => prec.left(11, seq(
      choice(
        $.string,
        $.number,
        $.variable_ref,
        $.function_call,
        $.method_call,
        $.identifier,
        $.parenthesized_expression
      ),
      repeat(choice(
        $.string,
        $.number,
        $.variable_ref,
        $.function_call,
        $.method_call,
        $.identifier,
        $.parenthesized_expression
      ))
    )),

    _expression: $ => choice(
      $.concatenation_expression,  // Implicit concatenation of adjacent expressions
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.new_expression,
      $.assignment_expression,
      $.this_expression,
      $.base_expression,
      $.quoted_continuation_string,
      $.string,
      $.number,
      $.boolean,
      $.variable_ref,  // %var% syntax
      $.array_literal,
      $.object_literal,
      $.index_expression,
      $.member_expression,
      $.method_call,
      $.identifier,
      $.function_call,
      $.parenthesized_expression,
    ),

    // Elements that can participate in concatenation
    _ternary_branch: $ => choice(
      prec(11, $._identifier_string_concat),
      $._expression
    ),

    // Ternary expression: condition ? consequence : alternative
    ternary_expression: $ => prec.right(1, seq(
      field('condition', $._expression),
      '?',
      field('consequence', $._ternary_branch),
      ':',
      optional(field('alternative', $._ternary_branch))
    )),

    // Binary expressions with operator precedence
    binary_expression: $ => choice(
      // Logical OR (precedence 2)
      prec.left(2, seq(field('left', $._expression), choice('||', 'or'), field('right', $._expression))),
      // Logical AND (precedence 3)
      prec.left(3, seq(field('left', $._expression), choice('&&', 'and'), field('right', $._expression))),
      // Bitwise OR (precedence 4)
      prec.left(4, seq(field('left', $._expression), '|', field('right', $._expression))),
      // Bitwise XOR (precedence 5)
      prec.left(5, seq(field('left', $._expression), '^', field('right', $._expression))),
      // Bitwise AND (precedence 6)
      prec.left(6, seq(field('left', $._expression), '&', field('right', $._expression))),
      // Equality (precedence 7)
      prec.left(7, seq(field('left', $._expression), choice('=', '==', '!=', '<>'), field('right', $._expression))),
      // Comparison (precedence 8)
      prec.left(8, seq(field('left', $._expression), choice('<', '>', '<=', '>='), field('right', $._expression))),
      // Bitwise shift (precedence 9)
      prec.left(9, seq(field('left', $._expression), choice('<<', '>>'), field('right', $._expression))),
      // Addition/Subtraction (precedence 10)
      prec.left(10, seq(field('left', $._expression), choice('+', '-'), field('right', $._expression))),
      // Multiplication/Division (precedence 11)
      prec.left(11, seq(field('left', $._expression), choice('*', '/', '//', '%'), field('right', $._expression))),
      // Concatenation (precedence 10)
      prec.left(10, seq(field('left', $._expression), '.', field('right', $._expression))),
      // Power (precedence 12, RIGHT associative)
      prec.right(12, seq(field('left', $._expression), '**', field('right', $._expression))),
    ),

    // Unary expressions
    continuation_assignment_expression: $ => prec.right(2, seq(
      field('left', choice($.identifier, $.member_expression, $.index_expression)),
      field('operator', choice(':=', '+=', '-=', '*=', '/=', '.=')),
      field('right', $.continuation_section)
    )),

    // Assignment expression - prec(1) ensures higher precedence than identifier's prec(-1)
    assignment_expression: $ => prec.right(1, seq(
      field('left', choice($.identifier, $.member_expression, $.index_expression)),
      field('operator', choice(':=', '+=', '-=', '*=', '/=', '.=')),
      field('right', $._expression)
    )),

    legacy_assignment_expression: $ => prec.right(1, seq(
      field('left', $.identifier),
      field('operator', '='),
      field('right', $.continuation_section)
    )),

    string: $ => choice(
      seq('"', repeat(choice($.escape_sequence, token.immediate('""'), $._double_string_content)), token.immediate('"')),
      seq("'", repeat(choice($.escape_sequence, token.immediate("''"), $._single_string_content)), token.immediate("'")),
    ),

    _double_string_content: $ => token.immediate(/[^"`\r\n]+/),

    _single_string_content: $ => token.immediate(/[^'`\r\n]+/),

    number: $ => choice(
      /0[xX][0-9a-fA-F]+/,
      /\d+\.\d+/,
      /\d+/,
    ),

    // Return statement with optional expression
    // Uses external scanner to detect when next line is a label
    // to prevent consuming the label's identifier as return value
    return_statement: $ => prec.right(choice(
      seq('return', $._statement_end),  // Bare return before label
      seq('return', $._expression),      // Return with expression
      'return',                          // Bare return (fallback)
    )),

    keyword: $ => choice(
      // All keywords are lowercase only to avoid parser bloat
      // Case-insensitive patterns cause exponential state explosion
      'break', 'continue', 'goto', 'gosub',
      'global', 'local', 'static',
      'throw',
      'new',
    ),

    identifier: $ => /[a-zA-Z_\u0080-\uFFFF][a-zA-Z0-9_\u0080-\uFFFF]*/,

    // Remaining punctuation - NOT parens/brackets/braces which have semantic meaning
    continuation_section: $ => token(choice(
      /\(\r?\n(?:[ \t]*[^ \t)\n][^\n]*\n|[ \t]*\n)*[ \t]*\)\r?\n/,
      /\((?:[ \t]*(?:%|[A-Za-z]+|`.))+[ \t]*\r?\n(?:[ \t]*[^ \t)\n][^\n]*\n|[ \t]*\n)*[ \t]*\)\r?\n/,
    )),
