test/corpus/commands.txt
================================================================================
Simple MsgBox command
================================================================================

MsgBox, Hello

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier))))

================================================================================
MsgBox with string
================================================================================

MsgBox, "Hello World"

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (string))))

================================================================================
Command with variable reference
================================================================================

MsgBox, %myVar%

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (variable_ref
        (identifier)))))

================================================================================
Command with builtin variable reference
================================================================================

MsgBox, %A_ScriptDir%

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (variable_ref
        (identifier)))))

================================================================================
Send command
================================================================================

Send, {Enter}

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier))))

================================================================================
Sleep command
================================================================================

Sleep, 1000

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (number))))

================================================================================
Run command
================================================================================

Run, notepad.exe

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier))))

================================================================================
SetTimer command
================================================================================

SetTimer, MyLabel

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier))))

================================================================================
Gosub keyword form
================================================================================

gosub MyLabel

--------------------------------------------------------------------------------

(source_file
  (keyword)
  (identifier))

================================================================================
Gui command with colon-pair in arguments
================================================================================

Gui, MyGui:Add, Text

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (gui_action
        gui_name: (identifier)
        action: (identifier))
      (identifier))))

================================================================================
Gui command with multiple colon-pairs
================================================================================

Gui, MyGui:Add, Text, x10 y20

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (gui_action
        gui_name: (identifier)
        action: (identifier))
      (identifier)
      (identifier)
      (identifier))))

================================================================================
StringReplace command
================================================================================

StringReplace, var_2, var, _2,, All

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier)
      (identifier)
      (identifier))))

================================================================================
IfInString command
================================================================================

IfInString, var, _2

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier))))

================================================================================
StringLeft command
================================================================================

StringLeft, output, input, 5

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier)
      (number))))

================================================================================
StringMid command
================================================================================

StringMid, output, input, 3, 5

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier)
      (number)
      (number))))

================================================================================
StringLower command
================================================================================

StringLower, output, input

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier))))

================================================================================
GuiControl command
================================================================================

GuiControl, Text, Hello

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier))))

================================================================================
ControlGetText command
================================================================================

ControlGetText, text, Edit1, ahk_class Notepad

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier)
      (identifier)
      (identifier))))

================================================================================
FileReadLine command
================================================================================

FileReadLine, line, myfile.txt, 1

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier)
      (identifier)
      (number))))

================================================================================
IfExist command
================================================================================

IfExist, C:\myfile.txt

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (drive_letter)
      (identifier)
      (identifier))))

================================================================================
IfWinActive command
================================================================================

IfWinActive, ahk_class Notepad

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier))))

================================================================================
MouseClick command
================================================================================

MouseClick, left, 100, 200

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)
      (number)
      (number))))

================================================================================
SoundPlay command
================================================================================

SoundPlay, %A_WinDir%\Media\ding.wav

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (variable_ref
        (identifier))
      (identifier)
      (identifier)
      (identifier))))

================================================================================
Process command
================================================================================

Process, Exist, notepad.exe

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier)
      (identifier))))

================================================================================
SetTitleMatchMode command
================================================================================

SetTitleMatchMode, 2

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (number))))

================================================================================
WinGetTitle command
================================================================================

WinGetTitle, title, A

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier))))

================================================================================
DriveGet command with drive letter
================================================================================

DriveGet, userSerial, Serial, C:

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier)
      (drive_letter))))

================================================================================
Multiple commands on separate lines
================================================================================

Gui, MyGui:Add, Text, vMyText
GuiControl, MyGui:, MyText

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (gui_action
        gui_name: (identifier)
        action: (identifier))
      (identifier)
      (identifier)))
  (command
    name: (identifier)
    (command_arguments
      (gui_target
        gui_name: (identifier))
      (identifier))))

================================================================================
Commands separated by blank line
================================================================================

MsgBox, Hello

Send, {Enter}

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)))
  (command
    name: (identifier)
    (command_arguments
      (identifier))))

================================================================================
Command before label
================================================================================

MsgBox, Hello
MyLabel:

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)))
  (label
    name: (identifier)))

================================================================================
Force expression with ternary in command
================================================================================

MsgBox, % LANG = "EN" ? "Hi" : "Bye"

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (force_expression
        (force_expr_start)
        (ternary_expression
          condition: (binary_expression
            left: (identifier)
            right: (string))
          consequence: (string)
          alternative: (string))))))

================================================================================
Force expression with binary in command
================================================================================

MsgBox, % x + 1

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (force_expression
        (force_expr_start)
        (binary_expression
          left: (identifier)
          right: (number))))))

================================================================================
Variable ref still works
================================================================================

MsgBox, %myVar%

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (variable_ref
        (identifier)))))

================================================================================
Force expression with function call
================================================================================

Send, % GetValue()

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (force_expression
        (force_expr_start)
        (force_concat_expression
          (function_call
            name: (identifier)))))))

================================================================================
Force expression in multi-argument command
================================================================================

Gui, Add, Text, vMyText, % "test"

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier)
      (identifier)
      (force_expression
        (force_expr_start)
        (force_concat_expression
          (string))))))

================================================================================
Empty argument (double comma) with force expression
================================================================================

Gui, MyGui:Add, Text,, % LANG = "EN" ? "Hi" : "Bye"

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (gui_action
        gui_name: (identifier)
        action: (identifier))
      (identifier)
      (force_expression
        (force_expr_start)
        (ternary_expression
          condition: (binary_expression
            left: (identifier)
            right: (string))
          consequence: (string)
          alternative: (string))))))

================================================================================
Command followed by method call on next line
================================================================================

Gui, MyGUI:Submit, NoHide
MyClass.method()

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (gui_action
        gui_name: (identifier)
        action: (identifier))
      (identifier)))
  (method_call
    object: (identifier)
    method: (identifier)))

================================================================================
IfInString command with block does not consume following function
================================================================================

IfInString, var, _2
{
    msgbox, % "test"
}

myFunc() {
    return
}

--------------------------------------------------------------------------------

(source_file
  (if_command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier))
    consequence: (statement_block
      (block
        (command
          name: (identifier)
          (command_arguments
            (force_expression
              (force_expr_start)
              (force_concat_expression
                (string))))))))
  (function_definition
    name: (identifier)
    body: (block
      (return_statement))))

================================================================================
If-command with block and else clause
================================================================================

IfNotInString, varName, value
{
    msgbox, test a
} else {
    msgbox, test b
}

--------------------------------------------------------------------------------

(source_file
  (if_command
    name: (identifier)
    (command_arguments
      (identifier)
      (identifier))
    consequence: (statement_block
      (block
        (command
          name: (identifier)
          (command_arguments
            (identifier)
            (identifier)))))
    alternative: (else_clause
      (statement_block
        (block
          (command
            name: (identifier)
            (command_arguments
              (identifier)
              (identifier))))))))

================================================================================
Command followed by assignment on next line
================================================================================

Gui, Carregando:Destroy
msg := LANGUAGE

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    (command_arguments
      (gui_action
        gui_name: (identifier)
        action: (identifier))))
  (assignment_expression
    left: (identifier)
    right: (identifier)))

================================================================================
Command with inline forced expression
================================================================================

Run % "*RunAs " (s:=A_IsCompiled ? "" : A_AhkPath " /r ") """" A_ScriptFullPath """" (s ? "" : " /r")
MsgBox, Done

--------------------------------------------------------------------------------

(source_file
  (command
    name: (identifier)
    arguments: (force_expression
      (force_expr_start)
      (force_concat_expression
        (string)
        (parenthesized_expression
          (assignment_expression
            left: (identifier)
            right: (ternary_expression
              condition: (identifier)
              consequence: (string)
              alternative: (identifier)
              alternative: (string))))
        (string)
        (identifier)
        (string)
        (parenthesized_expression
          (ternary_expression
            condition: (identifier)
            consequence: (string)
            alternative: (string))))))
  (command
    name: (identifier)
    (command_arguments
      (identifier))))
