test/corpus/continuation.txt
================================================================================
Simple continuation section
================================================================================

var := (
  line one
  line two
)

--------------------------------------------------------------------------------

(source_file
  (continuation_assignment_expression
    left: (identifier)
    right: (continuation_section)))

================================================================================
Continuation with options
================================================================================

sql := (LTrim
  SELECT *
  FROM users
)

--------------------------------------------------------------------------------

(source_file
  (continuation_assignment_expression
    left: (identifier)
    right: (continuation_section)))

================================================================================
Continuation with nested parens
================================================================================

query := (
  SELECT (id, name)
  FROM users
)

--------------------------------------------------------------------------------

(source_file
  (continuation_assignment_expression
    left: (identifier)
    right: (continuation_section)))

================================================================================
Empty continuation
================================================================================

empty := (
)

--------------------------------------------------------------------------------

(source_file
  (continuation_assignment_expression
    left: (identifier)
    right: (continuation_section)))

================================================================================
Legacy assignment continuation with percent option
================================================================================

code_part =
(% Join`r`n
  AccChildren(Acc) {
    Return ""
  }
)

--------------------------------------------------------------------------------

(source_file
  (legacy_assignment_expression
    left: (identifier)
    right: (continuation_section)))

================================================================================
Multiline ternary is not continuation
================================================================================

codeType := (A_ThisLabel = "TempMenu_CopyCodeSingle")     ? "single"
  : (A_ThisLabel = "TempMenu_CopyCodeParameters") ? "parameters"
  : "full"

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    left: (identifier)
    right: (ternary_expression
      condition: (parenthesized_expression
        (binary_expression
          left: (identifier)
          right: (string)))
      consequence: (string)
      alternative: (ternary_expression
        condition: (parenthesized_expression
          (binary_expression
            left: (identifier)
            right: (string)))
        consequence: (string)
        alternative: (string)))))

================================================================================
Legacy assignment continuation with Unicode identifier
================================================================================

中文 =
(LTrim
  line one
  line two
)

--------------------------------------------------------------------------------

(source_file
  (legacy_assignment_expression
    left: (identifier)
    right: (continuation_section)))

================================================================================
Multiline ternary with inline comment is not continuation
================================================================================

var1:=1
var2:=2

u := (var1==1
 || var2==2) ? ";" : "" ; Union

Text =
(
xxx
)

--------------------------------------------------------------------------------

(source_file
  (assignment_expression
    left: (identifier)
    right: (number))
  (assignment_expression
    left: (identifier)
    right: (number))
  (assignment_expression
    left: (identifier)
    right: (ternary_expression
      condition: (parenthesized_expression
        (binary_expression
          left: (binary_expression
            left: (identifier)
            right: (number))
          right: (binary_expression
            left: (identifier)
            right: (number))))
      consequence: (string)
      alternative: (string)))
  (comment)
  (legacy_assignment_expression
    left: (identifier)
    right: (continuation_section)))
